test/tests/compiler/16_characters_and_strings/invalid_types/extra_credit/prefix_incr_string.plx
#  Can't apply prefix ++/-- to string literal
pub fn main(none) i32 {
    ++"foo"
    return 0
}
